--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootajax
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootajax2
 spring.datasource.username=root
 spring.datasource.password=123123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
